--- a/STL/pair/pair_2/CMakeLists.txt
+++ b/STL/pair/pair_2/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.8)
-project(pair_use)
+project(pair_2)
 
 set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE_FILES main.cpp)
-add_executable(pair_use ${SOURCE_FILES})
+add_executable(pair_2 ${SOURCE_FILES})
