--- a/Eigen/Matrix Sınıfı/RobotlarIcinMatematikEigen1/RobotlarIcinMatematikEigen1/RobotlarIcinMatematikEigen1.vcxproj
+++ b/Eigen/Matrix Sınıfı/RobotlarIcinMatematikEigen1/RobotlarIcinMatematikEigen1/RobotlarIcinMatematikEigen1.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{4097FAB7-5944-41CA-9328-636B0337AC45}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>RobotlarIcinMatematikEigen1</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -89,7 +89,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\faruk\Desktop\desktop\Eigen\Eigen;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Users\binne\Downloads\eigen\Eigen;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -151,7 +151,9 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="RobotlarIcinMatematikEigen1.cpp" />
+    <ClCompile Include="RobotlarIcinMatematikEigen1.cpp">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\Users\binne\Downloads\eigen;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
