--- a/Eigen/Advanced Initialization/commaInitializer/Eigen/Eigen.vcxproj
+++ b/Eigen/Advanced Initialization/commaInitializer/Eigen/Eigen.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{162EA505-2C97-4AB2-A8BB-6798B291AE99}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Eigen</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -88,8 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\faruk\Desktop\Eigen\Eigen;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-    </ClCompile>
+      <AdditionalIncludeDirectories>D:\Eigen;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>    </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
