--- a/Eigen/Blok İşlemleri/koseIliskiliIslemler/Eigen/Eigen.vcxproj
+++ b/Eigen/Blok İşlemleri/koseIliskiliIslemler/Eigen/Eigen.vcxproj
@@ -23,8 +23,7 @@
     <ProjectGuid>{162EA505-2C97-4AB2-A8BB-6798B291AE99}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Eigen</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-  </PropertyGroup>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
